# rust-tera

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
data/database.db/: 000013.sst  000054.sst  IDENTITY  MANIFEST-000010  MANIFEST-000051
src/: database.rs  lib.rs  main.rs  models.rs  utils.rs
src/resources/: api.rs
src/views/: mod.rs  statics.rs  users.rs
static/css/: datatables.css  datatables.min.css
static/js/: datatables.js  datatables.min.js
templates/: layout.html
templates/users/: create.html  edit.html  index.html
