[package]
name = "rust-tera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tera = "1.19.1"
actix-files = "0.6.5"
serde = { version = "1.0.200", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
##serde_json = "1.0.116"
surrealdb = "1.4.2"